fix font, impl url-function, fix autocomplete (shiftkey + allowing you to type your own item), auto focus back to input after item has been inserted

--- a/src/index.css
+++ b/src/index.css
@@ -290,31 +290,31 @@
     outline: none;
 }
 :root {
-    background-color: rgb(31, 31, 31);
-    padding: 0;
-    margin: 0;
-    --spacing: 0.25em;
-    --brace-color: #d8a90c;
-    --outline-color: #ffffff17;
-    --number-color: #b5cea8;
-    --class-color: #d7ba7d;
-    --function-color: #dcdcaa;
-    --property-name-color: #9cdcfe;
-    --variable-color: #91ffd4;
-    --string-color: #ce9178;
-    --attribute-color: var(--property-name-color);
-    --foreground-color: #ccc;
     --at-rule-color: #c586c0;
+    --attribute-color: var(--property-name-color);
+    --brace-color: #d8a90c;
+    --class-color: #d7ba7d;
+    --drag-icon: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="white" stroke="white" viewBox="0 0 30 30"><g><path d="M4.843 18.126l-3.64-3.644 3.64-3.612c.464-.45-.234-1.2-.71-.71L.14 14.127c-.187.186-.187.525 0 .71l3.993 4c.488.49 1.18-.238.71-.71zm19.314-7.252l3.64 3.644-3.64 3.61c-.464.453.234 1.202.71.712l3.994-3.967c.187-.186.187-.525 0-.71l-3.993-4c-.488-.49-1.18.238-.71.71zm-6.03 13.283l-3.645 3.64-3.61-3.64c-.453-.464-1.202.235-.712.71l3.967 3.994c.186.187.525.187.71 0l4-3.993c.49-.488-.238-1.18-.71-.71zM10.873 4.843l3.644-3.64 3.612 3.64c.45.464 1.2-.235.71-.71L14.873.14c-.186-.187-.525-.187-.71 0l-4 3.993c-.49.488.238 1.18.71.71zM14 3.5V14H3.5c-.65 0-.655 1 0 1H14v10.5c0 .67 1 .665 1 0V15h10.5c.667 0 .665-1 0-1H15V3.5c0-.682-1-.638-1 0z"/></g></svg>');
+    --foreground-color: #ccc;
+    --function-color: #dcdcaa;
+    --info-icon: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M12 7.01002L12 7.00003M12 17L12 10" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+    --line-icon: url('data:image/svg+xml;utf8,<svg stroke="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 12L21 12" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+    --number-color: #b5cea8;
+    --outline-color: #ffffff17;
+    --plus-icon: url('data:image/svg+xml;utf8,<svg stroke="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path d="M4 12H20M12 4V20" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+    --property-name-color: #9cdcfe;
+    --spacing: 0.25em;
+    --string-color: #ce9178;
+    --variable-color: #91ffd4;
+    --x-icon: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>');
+    background-color: rgb(31, 31, 31);
     color: var(--foreground-color);
     font-size: 18px;
-    --font-family: Berkeley Mono;
-    font-family: var(--font-family), menlo;
     height: 100%;
-    --x-icon: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>');
-    --line-icon: url('data:image/svg+xml;utf8,<svg stroke="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 12L21 12" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>');
-    --plus-icon: url('data:image/svg+xml;utf8,<svg stroke="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path d="M4 12H20M12 4V20" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>');
-    --drag-icon: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="white" stroke="white" viewBox="0 0 30 30"><g><path d="M4.843 18.126l-3.64-3.644 3.64-3.612c.464-.45-.234-1.2-.71-.71L.14 14.127c-.187.186-.187.525 0 .71l3.993 4c.488.49 1.18-.238.71-.71zm19.314-7.252l3.64 3.644-3.64 3.61c-.464.453.234 1.202.71.712l3.994-3.967c.187-.186.187-.525 0-.71l-3.993-4c-.488-.49-1.18.238-.71.71zm-6.03 13.283l-3.645 3.64-3.61-3.64c-.453-.464-1.202.235-.712.71l3.967 3.994c.186.187.525.187.71 0l4-3.993c.49-.488-.238-1.18-.71-.71zM10.873 4.843l3.644-3.64 3.612 3.64c.45.464 1.2-.235.71-.71L14.873.14c-.186-.187-.525-.187-.71 0l-4 3.993c-.49.488.238 1.18.71.71zM14 3.5V14H3.5c-.65 0-.655 1 0 1H14v10.5c0 .67 1 .665 1 0V15h10.5c.667 0 .665-1 0-1H15V3.5c0-.682-1-.638-1 0z"/></g></svg>');
-    --info-icon: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M12 7.01002L12 7.00003M12 17L12 10" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+    margin: 0;
+    padding: 0;
+    --font-family: Berkeley Mono, menlo;
+    font-family: var(--font-family);
 }
 @keyframes expand {
     0% {
@@ -786,10 +786,16 @@
 [data-kind="rule"] [data-attr="properties"] .search-options .search-item-value.candidate + .search-item-description {
     text-decoration: underline;
 }
+[data-kind="rule"] [data-attr="properties"] .search-options .search-item-value:first-child {
+    
+}
 [data-kind="rule"] [data-attr="properties"] .search-options:has(.search-item-description[data-is-empty="false"]) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(1fr, 10);
+}
+[data-kind="rule"] [data-attr="properties"] .search-options:not(:has(.candidate)) .search-item-value:first-child {
+    text-decoration: underline;
 }
 [data-kind="rule"] [data-kind="property"] {
     padding-left: 1em;
@@ -829,6 +835,16 @@
 }
 [data-kind="universal-selector"]::after {
     content: "*";
+}
+[data-kind="url-function"] > [data-attr="name"] {
+    color: var(--function-color);
+}
+[data-kind="url-function"] > [data-attr="name"]::after {
+    content: "(";
+    color: var(--foreground-color);
+}
+[data-kind="url-function"] > [data-attr="value"]::after {
+    content: ")";
 }
 [data-unit-type]::after {
     color: var(--function-color);
@@ -904,7 +920,6 @@ body .search.active {
     border-radius: 5px;
     box-shadow: 0px 2px 2px 2px #00000030;
     color: white;
-    font-family: inherit;
     font-size: 1em;
     height: 1.25em;
     margin-top: 1em;
@@ -912,6 +927,7 @@ body .search.active {
     z-index: 10;
     background-color: rgb(40, 40, 40);
     min-width: 40em;
+    font-family: var(--font-family);
 }
 body .search:not(.active) {
     display: none;
@@ -1006,9 +1022,9 @@ button {
     cursor: pointer;
     background: black;
     color: var(--foreground-color);
-    font-family: inherit;
     border: 0.1em solid rgb(40, 40, 40);
     font-size: inherit;
+    font-family: var(--font-family);
 }
 button.open-help {
     font-size: 0.8rem;
@@ -1099,6 +1115,10 @@ menu li {
 poop {
     
 }
+svg {
+    width: 1em;
+    height: 1em;
+}
 terst {
     
 }
@@ -1107,8 +1127,11 @@ tes {
 }
 test {
     font-size: 31px;
-    color: rgb(181, 206, 168);
     padding: var(--spacing);
+    color: rgb(181, 206, 168);
+    display: flex;
+    flex: 1;
+    flex-flow: flex-direction;
 }
 test2 {
     font-size: 31px;
